--- a/part4/style.css
+++ b/part4/style.css
@@ -23,3 +23,12 @@ h1 {
   color: transparent;
   text-shadow: 0 0 4px white;
 }
+
+p {
+  position: absolute;
+  top: 40px;
+  right: 10px;
+  color: white;
+  font-size: 1.2rem;
+  font-family: sans-serif;
+}
